# shapes

./: CMakeLists.txt  README.md  vcpkg.json
cmake/vcpkg/: vcpkg.toolchain.cmake
src/: CMakeLists.txt
src/cli/: CMakeLists.txt
src/cli/src/: main.cpp
src/cmake/: add_shapes_executable.cmake  add_shapes_module.cmake  set_shapes_target_properties.cmake  shapes-config.cmake  shapes-install-targets.cmake
src/core/: CMakeLists.txt
src/core/include/shapes/core/: shape.hpp
src/core/src/: shape.cpp
tests/: CMakeLists.txt
tests/cmake/: add_shapes_test.cmake
tests/core/: CMakeLists.txt  shape_test.cpp
